skdep/force-app/main/default/objects/Pricebook2/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Group</label>
    <referenceTo>Customer_Group__c</referenceTo>
    <relationshipLabel>Price Books</relationshipLabel>
    <relationshipName>Price_Books</relationshipName>
    <type>Lookup</type>
</CustomField>