skdep/force-app/main/default/objects/Pricebook2/fields/IsDiscount__c.field-meta.xml
<CustomField>
    <fullName>IsDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDiscount</label>
    <type>Checkbox</type>
</CustomField>