skdep/force-app/main/default/objects/Pricebook2/listViews/Price_Book.listView-meta.xml
<ListView>
    <fullName>Price_Book</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>Customer__c</columns>
    <columns>Customer_Group__c</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>IsDiscount__c</columns>
    <filterScope>Everything</filterScope>
    <label>Price Book</label>
    <language>en_US</language>
</ListView>